tests/ui/stability-attribute/stability-attribute-non-staged-force-unstable.rs
//@ compile-flags:-Zforce-unstable-if-unmarked

#[unstable()] //~ ERROR: stability attributes may not be used
#[stable()] //~ ERROR: stability attributes may not be used
fn main() {}
